--- a/.gitignore
+++ b/.gitignore
@@ -409,7 +409,7 @@ StyleCopReport.xml
 *.tmp
 *.tmp_proj
 *_wpftmp.csproj
-*.log
+*.LogInformation
 *.tlog
 *.vspscc
 *.vssscc
@@ -604,7 +604,7 @@ FakesAssemblies/
 .ntvs_analysis.dat
 node_modules/
 
-# Visual Studio 6 build log
+# Visual Studio 6 build LogInformation
 *.plg
 
 # Visual Studio 6 workspace options file
